fixed scrollbar appearing on windows

--- a/webapp/admin.css
+++ b/webapp/admin.css
@@ -7,7 +7,6 @@
 	border: 1px solid #EF2F5F;
 	border-radius: 5px;
 	margin-top: -5px;
-	overflow: scroll;
 }
 .adminNavbar {
 	margin-left: calc(2.5vw - 1px);
@@ -37,6 +36,17 @@
 	border: none;
 	font-size: 20px;
 }
+
+.hideoverflow {
+	display: inline-block;
+	vertical-align: top;
+	overflow: hidden;
+
+}
+.hideoverflow select {
+	padding: 4px;
+	margin: -5px -20px -5px -5px;
+  }
 
 button.red-dark:hover { 
 	background-color: #EF2F5F;
